--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "jspm-typescript-seed",
+  "name": "jspm-typescript-samples",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "build": "tsc -p src",
-    "build:trace": "tsc -p src --traceResolution",
-    "build:debug": "tsc -p src --listFiles --listEmittedFiles",
-    "serve": "lite-server"
+    "build": "tsc -p docs",
+    "build:watch": "npm run build && tsc -p docs -w",
+    "build:trace": "tsc -p docs --traceResolution",
+    "build:debug": "tsc -p docs --listFiles --listEmittedFiles",
+    "serve": "lite-server",
+    "bundle:parallax": "( cd docs && jspm bundle ./src-parallax/app/main ./src-parallax/build.js )",
+    "bundle:jquery-parallax.js": "( cd docs && jspm bundle ./src-jquery-parallax.js/app/main ./src-jquery-parallax.js/build.js )",
+    "bundle": "npm run bundle:parallax && npm run bundle:jquery-parallax.js",
+    "unbundle": "jspm unbundle"
   },
   "author": "",
   "license": "ISC",
@@ -20,10 +25,19 @@
   },
   "jspm": {
     "directories": {
-      "baseURL": "src",
+      "baseURL": "docs",
       "packages": "jspm_packages"
     },
-    "configFile": "src/systemjs.config.js",
+    "configFile": "docs/systemjs.config.js",
+    "dependencies": {
+      "css": "github:systemjs/plugin-css@^0.1.32",
+      "jquery": "npm:jquery@^2.2.4",
+      "jquery-parallax.js": "npm:jquery-parallax.js@^1.4.3",
+      "parallax": "github:wagerfield/parallax@^2.1.3"
+    },
     "devDependencies": {}
+  },
+  "dependencies": {
+    "@types/jquery": "^2.0.40"
   }
 }
