--- a/package.json
+++ b/package.json
@@ -36,11 +36,17 @@
     "dependencies": {
       "css": "github:systemjs/plugin-css@^0.1.32",
       "d3-selection": "npm:d3-selection@^1.0.4",
+      "domready": "npm:domready@^1.0.8",
       "jquery": "npm:jquery@^2.2.4",
       "jquery-parallax.js": "npm:jquery-parallax.js@^1.4.3",
       "parallax": "github:wagerfield/parallax@^2.1.3"
     },
-    "devDependencies": {}
+    "devDependencies": {},
+    "overrides": {
+      "github:wagerfield/parallax@2.1.3": {
+        "main": "deploy/jquery.parallax.js"
+      }
+    }
   },
   "dependencies": {
     "@types/d3-selection": "^1.0.10",
