--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bundle:d3-selection": "node utils/bundle.js utils/src-d3-selection",
     "bundle:chartist": "node utils/bundle.js utils/src-chartist",
     "bundle:promise": "node utils/bundle.js utils/src-promise",
+    "bundle:log": "node utils/bundle.js utils/src-log",
     "unbundle": "node utils/bundle.js --unbundle"
   },
   "author": "",
@@ -36,12 +37,14 @@
     },
     "configFile": "docs/systemjs.config.js",
     "dependencies": {
+      "adamschwartz/log": "github:adamschwartz/log@^0.3.0",
       "chartist": "npm:chartist@^0.10.1",
       "css": "github:systemjs/plugin-css@^0.1.32",
       "d3-selection": "npm:d3-selection@^1.0.4",
       "domready": "npm:domready@^1.0.8",
       "jquery": "npm:jquery@^2.2.4",
       "jquery-parallax.js": "npm:jquery-parallax.js@^1.4.3",
+      "log": "github:adamschwartz/log@^0.3.0",
       "parallax": "github:wagerfield/parallax@^2.1.3"
     },
     "devDependencies": {},
