--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
       "jquery": "npm:jquery@^2.2.4",
       "jquery-parallax.js": "npm:jquery-parallax.js@^1.4.3",
       "log": "github:adamschwartz/log@^0.3.0",
-      "parallax": "github:wagerfield/parallax@^2.1.3"
+      "parallax": "github:wagerfield/parallax@^2.1.3",
+      "screenlog": "npm:screenlog@^0.2.2"
     },
     "devDependencies": {},
     "overrides": {
