--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
       "jquery-parallax.js": "npm:jquery-parallax.js@^1.4.3",
       "log": "github:adamschwartz/log@^0.3.0",
       "parallax": "github:wagerfield/parallax@^2.1.3",
+      "rxjs": "npm:rxjs@^5.2.0",
       "screenlog": "npm:screenlog@^0.2.2"
     },
     "devDependencies": {},
