--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dependencies": {
       "adamschwartz/log": "github:adamschwartz/log@^0.3.0",
       "chartist": "npm:chartist@^0.10.1",
+      "codemirror": "npm:codemirror@^5.25.0",
       "css": "github:systemjs/plugin-css@^0.1.32",
       "d3-selection": "npm:d3-selection@^1.0.4",
       "domready": "npm:domready@^1.0.8",
@@ -58,6 +59,7 @@
   },
   "dependencies": {
     "@types/chartist": "^0.9.34",
+    "@types/codemirror": "0.0.38",
     "@types/d3-selection": "^1.0.10",
     "@types/jquery": "^2.0.40",
     "@types/shelljs": "^0.7.0"
