--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "bundle": "node utils/bundle.js",
     "bundle:parallax": "node utils/bundle.js src-parallax",
     "bundle:jquery-parallax.js": "node utils/bundle.js src-jquery-parallax.js",
-    "bundle:d3-selection": "node utils/bundle.js utils/src-d3-selection",
-    "bundle:chartist": "node utils/bundle.js utils/src-chartist",
-    "bundle:promise": "node utils/bundle.js utils/src-promise",
-    "bundle:log": "node utils/bundle.js utils/src-log",
+    "bundle:d3-selection": "node utils/bundle.js src-d3-selection",
+    "bundle:chartist": "node utils/bundle.js src-chartist",
+    "bundle:promise": "node utils/bundle.js src-promise",
+    "bundle:log": "node utils/bundle.js src-log",
+    "bundle:bxslider": "node utils/bundle.js src-bxslider",
+    "bundle:reactive": "node utils/bundle.js src-reactive",
     "unbundle": "node utils/bundle.js --unbundle"
   },
   "author": "",
@@ -38,6 +40,7 @@
     "configFile": "docs/systemjs.config.js",
     "dependencies": {
       "adamschwartz/log": "github:adamschwartz/log@^0.3.0",
+      "bxslider": "npm:bxslider@^4.2.11",
       "chartist": "npm:chartist@^0.10.1",
       "codemirror": "npm:codemirror@^5.25.0",
       "css": "github:systemjs/plugin-css@^0.1.32",
@@ -54,6 +57,9 @@
     "overrides": {
       "github:wagerfield/parallax@2.1.3": {
         "main": "deploy/jquery.parallax.js"
+      },
+      "npm:bxslider@4.2.11": {
+        "main": "dist/jquery.bxslider.js"
       }
     }
   },
@@ -61,6 +67,7 @@
     "@types/chartist": "^0.9.34",
     "@types/codemirror": "0.0.38",
     "@types/d3-selection": "^1.0.10",
+    "@types/dw-bxslider-4": "^4.2.29",
     "@types/jquery": "^2.0.40",
     "@types/shelljs": "^0.7.0"
   }
