--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bundle:log": "node utils/bundle.js src-log",
     "bundle:bxslider": "node utils/bundle.js src-bxslider",
     "bundle:reactive": "node utils/bundle.js src-reactive",
+    "bundle:immutable": "node utils/bundle.js src-immutable",
     "unbundle": "node utils/bundle.js --unbundle"
   },
   "author": "",
@@ -46,6 +47,7 @@
       "css": "github:systemjs/plugin-css@^0.1.32",
       "d3-selection": "npm:d3-selection@^1.0.4",
       "domready": "npm:domready@^1.0.8",
+      "immutable": "npm:immutable@^3.8.1",
       "jquery": "npm:jquery@^2.2.4",
       "jquery-parallax.js": "npm:jquery-parallax.js@^1.4.3",
       "log": "github:adamschwartz/log@^0.3.0",
