--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
       "codemirror": "npm:codemirror@^5.25.0",
       "css": "github:systemjs/plugin-css@^0.1.32",
       "d3-selection": "npm:d3-selection@^1.0.4",
+      "decimal.js": "github:MikeMcl/decimal.js@^7.2.0",
       "domready": "npm:domready@^1.0.8",
       "immutable": "npm:immutable@^3.8.1",
       "jquery": "npm:jquery@^2.2.4",
