samples to examples

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jspm-typescript-samples",
+  "name": "jspm-typescript-examples",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
