--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bundle:bxslider": "node utils/bundle.js src-bxslider",
     "bundle:reactive": "node utils/bundle.js src-reactive",
     "bundle:immutable": "node utils/bundle.js src-immutable",
+    "bundle:showdown": "node utils/bundle.js src-showdown",
     "unbundle": "node utils/bundle.js --unbundle"
   },
   "author": "",
@@ -54,7 +55,8 @@
       "log": "github:adamschwartz/log@^0.3.0",
       "parallax": "github:wagerfield/parallax@^2.1.3",
       "rxjs": "npm:rxjs@^5.2.0",
-      "screenlog": "npm:screenlog@^0.2.2"
+      "screenlog": "npm:screenlog@^0.2.2",
+      "showdown": "github:showdownjs/showdown@^1.7.1"
     },
     "devDependencies": {},
     "overrides": {
@@ -72,6 +74,7 @@
     "@types/d3-selection": "^1.0.10",
     "@types/dw-bxslider-4": "^4.2.29",
     "@types/jquery": "^2.0.40",
-    "@types/shelljs": "^0.7.0"
+    "@types/shelljs": "^0.7.0",
+    "@types/showdown": "^1.4.32"
   }
 }
