--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bundle:reactive": "node utils/bundle.js src-reactive",
     "bundle:immutable": "node utils/bundle.js src-immutable",
     "bundle:showdown": "node utils/bundle.js src-showdown",
+    "bundle:decorator": "node utils/bundle.js src-decorator",
     "unbundle": "node utils/bundle.js --unbundle"
   },
   "author": "",
@@ -29,10 +30,10 @@
   "keywords": [],
   "description": "",
   "devDependencies": {
-    "jspm": "^0.16.52",
-    "lite-server": "^2.2.2",
-    "shelljs": "^0.7.6",
-    "typescript": "^2.4.1"
+    "jspm": "^0.16.53",
+    "lite-server": "^2.3.0",
+    "shelljs": "^0.7.8",
+    "typescript": "^2.6.1"
   },
   "jspm": {
     "directories": {
@@ -42,39 +43,39 @@
     "configFile": "docs/systemjs.config.js",
     "dependencies": {
       "adamschwartz/log": "github:adamschwartz/log@^0.3.0",
-      "bxslider": "npm:bxslider@^4.2.11",
-      "chartist": "npm:chartist@^0.10.1",
-      "codemirror": "npm:codemirror@^5.25.0",
-      "css": "github:systemjs/plugin-css@^0.1.32",
-      "d3-selection": "npm:d3-selection@^1.0.4",
-      "decimal.js": "github:MikeMcl/decimal.js@^7.2.0",
+      "bxslider": "npm:bxslider@^4.2.13",
+      "chartist": "npm:chartist@^0.11.0",
+      "codemirror": "npm:codemirror@^5.31.0",
+      "css": "github:systemjs/plugin-css@^0.1.36",
+      "d3-selection": "npm:d3-selection@^1.1.0",
+      "decimal.js": "github:MikeMcl/decimal.js@^7.3.0",
       "domready": "npm:domready@^1.0.8",
-      "immutable": "npm:immutable@^3.8.1",
+      "immutable": "npm:immutable@^3.8.2",
       "jquery": "npm:jquery@^2.2.4",
-      "jquery-parallax.js": "npm:jquery-parallax.js@^1.4.3",
+      "jquery-parallax.js": "npm:jquery-parallax.js@^1.5.0",
       "log": "github:adamschwartz/log@^0.3.0",
       "parallax": "github:wagerfield/parallax@^2.1.3",
-      "rxjs": "npm:rxjs@^5.2.0",
+      "rxjs": "npm:rxjs@^5.5.2",
       "screenlog": "npm:screenlog@^0.2.2",
-      "showdown": "github:showdownjs/showdown@^1.7.1"
+      "showdown": "github:showdownjs/showdown@^1.8.1"
     },
     "devDependencies": {},
     "overrides": {
       "github:wagerfield/parallax@2.1.3": {
         "main": "deploy/jquery.parallax.js"
       },
-      "npm:bxslider@4.2.11": {
+      "npm:bxslider@4.2.13": {
         "main": "dist/jquery.bxslider.js"
       }
     }
   },
   "dependencies": {
-    "@types/chartist": "^0.9.34",
-    "@types/codemirror": "0.0.38",
-    "@types/d3-selection": "^1.0.10",
-    "@types/dw-bxslider-4": "^4.2.29",
+    "@types/chartist": "^0.9.37",
+    "@types/codemirror": "0.0.50",
+    "@types/d3-selection": "^1.1.0",
+    "@types/dw-bxslider-4": "^4.2.30",
     "@types/jquery": "^2.0.40",
-    "@types/shelljs": "^0.7.0",
-    "@types/showdown": "^1.4.32"
+    "@types/shelljs": "^0.7.5",
+    "@types/showdown": "^1.7.1"
   }
 }
